force-app/main/default/objects/sc_ext__Fill_Rates_Job__c/fields/sc_ext__All_Fields__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__All_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Fields</label>
    <type>Checkbox</type>
</CustomField>