force-app/main/default/objects/sc_ext__Fill_Rates_Job__c/fields/sc_ext__Fill_Rate_Empties_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Fill_Rate_Empties_Job_Id__c</fullName>
    <label>Fill Rate Empties Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>