force-app/main/default/objects/sc_ext__Fill_Rates_Job__c/fields/sc_ext__Items_Processed__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Items_Processed__c</fullName>
    <label>Items Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>