force-app/main/default/objects/sc_ext__Fill_Rates_Job__c/fields/sc_ext__Job_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Job_Record_Count__c</fullName>
    <label>Job Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>