force-app/main/default/objects/sc_ext__Fill_Rates_Job__c/fields/sc_ext__Security_Insights_Job__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Security_Insights_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security Insights Job</label>
    <referenceTo>sc_ext__Security_Insights_Refresh__c</referenceTo>
    <relationshipLabel>Fill Rates Jobs</relationshipLabel>
    <relationshipName>Fill_Rates_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>