force-app/main/default/objects/sc_ext__Fill_Rates_Job__c/fields/sc_ext__Total_Items__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Total_Items__c</fullName>
    <label>Total Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>