force-app/main/default/objects/sc_ext__Fill_Rates_Job__c/fields/sc_ext__Uses_Files__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Uses_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Files</label>
    <type>Checkbox</type>
</CustomField>